fix: Datepicker positioning and Checkbox icon visibility
- Improve Datepicker smooth positioning
- Fix Checkbox check icon always visible issue

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -666,6 +666,10 @@ body {
   bottom: 1rem;
 }
 
+.bottom-auto {
+  bottom: auto;
+}
+
 .bottom-full {
   bottom: 100%;
 }
@@ -771,8 +775,8 @@ body {
   margin-right: 0.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-2 {
